feat: 제목,카테고리 검색 최적화 및 상세조회시 리워드 포함